@@ -1,5 +1,8 @@
 Changes in robustHD version 0.3.1
 
+    + rlars now uses perryFit() instead of perryTuning() for prediction error 
+      estimation.
+    
     + Bugfix in rlars() allowing the number of variables to be sequenced to be 
       larger than half the number of observations.
     
